--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.6",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
+    "dotenv": "^16.0.3",
     "font-awesome": "^4.7.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -20,6 +22,7 @@
     "react-bootstrap": "^2.7.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -29,10 +32,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-scripts start .env",
+    "build": "react-scripts build .env",
+    "test": "react-scripts test .env",
+    "eject": "react-scripts eject .env"
   },
   "eslintConfig": {
     "extends": [
