--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REACT_APP_DOMAIN_API=http://localhost:5051/
 
 REACT_APP_STRIPE_PUBLISHABLE_KEY=pk_test_XmQksSPAFpbKOmS03gbraxEu
 REACT_APP_STRIPE_SECRET_KEY=sk_test_TwwY13NtjjKjyTgXWA7qhlJx
+
+REACT_APP_SOCKET_IO_SERVER=http://localhost:5051
