--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-toastify": "^9.1.2",
     "redux": "^4.2.1",
     "sass": "^1.60.0",
+    "socket.io-client": "^4.6.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
