--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -36,6 +37,7 @@
     "sass": "^1.60.0",
     "socket.io-client": "^4.6.2",
     "sort-by": "^1.2.0",
+    "sprintf-js": "^1.1.2",
     "sweetalert2": "^11.7.3",
     "sweetalert2-react-content": "^5.0.7",
     "universal-cookie": "^4.0.4",
